feat(ai-recipe): 重构AI食谱页面增强用户体验
- 添加食谱摘要卡片显示关键信息
- 实现重新生成食谱功能按钮
- 增加快捷操作按钮支持快速调整需求
- 添加食谱反馈系统包括好评差评及原因收集
- 优化移动端响应式设计适配
- 扩展AI配置选项支持口味偏好等设置
- 改进聊天输入界面UI设计
- 添加反馈模态窗口收集用户意见
- 重构CSS样式文件提升视觉效果
- 优化JavaScript代码结构增强可维护性